# arc_method

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: pyproject.toml
src/arc_method/: __ini__.py  core.py
