[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-method"
version = "0.1.1"
description = "Arc Yöntemi tabanlı LLM interaction framework."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Arda Akgür", email = "arda@akgur.com" }
]

dependencies = [
    "groq>=0.5.0",
    "openai>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/Arcnaboo/arc-method"
